--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,9 @@ li span {
   font-weight: 300;
 }
 .design-photo {
-  height: 80vh;
-  width: 95vw;
+  height: 500px;
+  width: 80vw;
+  max-width: 700px;
   background-image: url(/images/image-header-desktop.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -59,4 +60,10 @@ li span {
   width: 100%;
   height: 100%;
   background-color: hsl(277, 64%, 61%, 0.35);
+}
+
+@media screen and (max-width: 750px) {
+  main{
+    flex-direction: column-reverse;
+  }
 }
